--- a/data_analysis_group_04_notebook.Rmd
+++ b/data_analysis_group_04_notebook.Rmd
@@ -140,6 +140,55 @@ hispanicorlatino_data_homeownership <- get_acs(
   state = "MD",
   year = 2019)
 ```
+
+```{r}
+##Owner combined
+owner_combined_race_1 <- white_data_homeownership %>%
+  inner_join(black_data_homeownership, by=c("GEOID", "NAME")) %>%
+  rename(owner_black_population=estimate.y, owner_white_population=estimate.x) %>%
+  select(GEOID, NAME, owner_black_population, owner_white_population)
+
+owner_combined_race_2 <- owner_combined_race_1 %>%
+  inner_join(americanindian_alaskannative_data_homeownership, by=c("GEOID", "NAME")) %>%
+  rename(owner_native_population=estimate) 
+
+owner_combined_race_3 <- owner_combined_race_2 %>%
+  inner_join(asian_data_homeownership, by=c("GEOID", "NAME")) %>%
+  rename(owner_asian_population=estimate)
+
+owner_combined_race_4 <- owner_combined_race_3 %>%
+  inner_join(nativehawaiian_aapi_data_homeownership, by=c("GEOID", "NAME")) %>%
+  rename(owner_pacific_island_population=estimate)
+
+owner_combined_race_5 <- owner_combined_race_4 %>%
+  inner_join(someohterracealone_data_homeownership, by=c("GEOID", "NAME")) %>%
+  rename(owner_some_other_race=estimate)
+
+owner_combined_race_6 <- owner_combined_race_5 %>%
+  inner_join(twootherraces_data_homeownership, by=c("GEOID", "NAME")) %>%
+  rename(owner_two_or_more_races=estimate)
+
+owner_combined_race_7 <- owner_combined_race_6 %>%
+  inner_join(whitealonenothispanicorlatino_data_homeownership, by=c("GEOID", "NAME")) %>%
+  rename(owner_whitealonenothispanicorlatino_data_homeownership=estimate)
+
+owner_combined_race_8 <- owner_combined_race_7 %>%
+  inner_join(hispanicorlatino_data_homeownership, by=c("GEOID", "NAME")) %>%
+  rename(hispanicorlatino_data_homeownership=estimate)
+
+
+```
+
+```{r}
+#Combined ownership and race
+
+final_owner_race_demographics <- owner_combined_race_8 %>%
+  select(GEOID, NAME, owner_black_population, owner_white_population, owner_native_population, owner_asian_population, owner_pacific_island_population, owner_some_other_race, owner_two_or_more_races, owner_whitealonenothispanicorlatino_data_homeownership,hispanicorlatino_data_homeownership)
+
+
+
+```
+
 ```{r}
 ##Home renters by race
 white_data_rentership <- get_acs(
@@ -197,10 +246,55 @@ hispanicorlatino_data_rentership <- get_acs(
   variables = c(race = "B25003I_003"),
   state = "MD",
   year = 2019)
+```
 
 
+```{r}
+##Owner combined
+renter_combined_race_1 <- white_data_rentership %>%
+  inner_join(black_data_rentership, by=c("GEOID", "NAME")) %>%
+  rename(renter_black_population=estimate.y, renter_white_population=estimate.x) %>%
+  select(GEOID, NAME, renter_black_population, renter_white_population)
+
+renter_combined_race_2 <- renter_combined_race_1 %>%
+  inner_join(americanindian_alaskannative_data_rentership, by=c("GEOID", "NAME")) %>%
+  rename(renter_native_population=estimate) 
+
+renter_combined_race_3 <- renter_combined_race_2 %>%
+  inner_join(asian_data_rentership, by=c("GEOID", "NAME")) %>%
+  rename(renter_asian_population=estimate)
+
+renter_combined_race_4 <- renter_combined_race_3 %>%
+  inner_join(nativehawaiian_aapi_data_rentership, by=c("GEOID", "NAME")) %>%
+  rename(renter_pacific_island_population=estimate)
+
+renter_combined_race_5 <- renter_combined_race_4 %>%
+  inner_join(someohterracealone_data_rentership, by=c("GEOID", "NAME")) %>%
+  rename(renter_some_other_race=estimate)
+
+renter_combined_race_6 <- renter_combined_race_5 %>%
+  inner_join(twootherraces_data_rentership, by=c("GEOID", "NAME")) %>%
+  rename(renter_two_or_more_races=estimate)
+
+renter_combined_race_7 <- renter_combined_race_6 %>%
+  inner_join(whitealonenothispanicorlatino_data_rentership, by=c("GEOID", "NAME")) %>%
+  rename(renter_hispanicorlatino_data=estimate)
+
+renter_combined_race_8 <- renter_combined_race_7 %>%
+  inner_join(hispanicorlatino_data_rentership, by=c("GEOID", "NAME")) %>%
+  rename(renter_hispanicorlatino_data=estimate)
+
+
+```
+
+```{r}
+#Combined ownership and race
+
+final_renter_race_demographics <- renter_combined_race_8 %>%
+  select(GEOID, NAME, renter_black_population, renter_white_population, renter_native_population, renter_asian_population, renter_pacific_island_population, renter_some_other_race, renter_two_or_more_races, renter_hispanicorlatino_data,renter_hispanicorlatino_data)
 
 
 
 ```
+
 
